Opened 17 years ago
Closed 16 years ago
#2847 closed bug (fixed)
crash in vesa_get_accelerant_clone_info()
Reported by: | kaliber | Owned by: | axeld |
---|---|---|---|
Priority: | normal | Milestone: | R1 |
Component: | Kits/Game Kit | Version: | R1/pre-alpha1 |
Keywords: | Cc: | ||
Blocked By: | Blocking: | ||
Platform: | All |
Description ¶
Many of Allegro graphics library examples are crashing:
(gdb) bt #0 0x008c39a5 in vesa_get_accelerant_clone_info () from /boot/beos/system/add-ons/accelerants/vesa.accelerant #1 0x005f3109 in BWindowScreen::_InitClone () from /boot/beos/system/lib/libgame.so #2 0x005f289d in BWindowScreen::_SetupAccelerantHooks () from /boot/beos/system/lib/libgame.so #3 0x005f2649 in BWindowScreen::_Activate () from /boot/beos/system/lib/libgame.so #4 0x005f194e in BWindowScreen::WindowActivated () from /boot/beos/system/lib/libgame.so #5 0x004ef026 in BWindow::DispatchMessage () from /boot/beos/system/lib/libbe.so #6 0x004f3910 in BWindow::task_looper () from /boot/beos/system/lib/libbe.so #7 0x004492c3 in BLooper::_task0_ () from /boot/beos/system/lib/libbe.so #8 0x0071e89c in thread_entry () from /boot/beos/system/lib/libroot.so #9 0x70143fec in ?? ()
Change History (1)
comment:1 by , 16 years ago
Component: | Drivers/Graphics → Kits/Game Kit |
---|---|
Resolution: | → fixed |
Status: | new → closed |
Note:
See TracTickets
for help on using tickets.
Fixed in hrev28534.