* BWindowScreen::_InitClone() was broken, it called the "get clone info" method   on uninitialized accelerant, but that's what AS_GET_DRIVER_PATH is for. * This should fix #2847.

git-svn-id: file:///srv/svn/repos/haiku/haiku/trunk@28534 a95241bf-73f2-0310-859d-f6bbb57e9c96